[tool.poetry]
name = "fraud-detection"
version = "0.1.0"
description = "used to predict fradulent transactions"
authors = ["alemishch <mishchenko.ad@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^1.9.0"
matplotlib = "^3.4.0"
numpy = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"